--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   #permission_handler: ^5.0.1+1
   path_provider: ^1.6.11
   flutter_downloader: ^1.4.4
+  google_fonts: ^1.1.0
   #TODO: https://pub.dev/packages/quick_actions
 
 dependency_overrides:
