--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   path_provider: ^1.6.11
   flutter_downloader: ^1.4.4
   google_fonts: ^1.1.0
+  miniplayer: ^0.1.0
   #TODO: https://pub.dev/packages/quick_actions
 
 dependency_overrides:
