--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,18 +12,19 @@ dependencies:
   flutter:
     sdk: flutter
 
-  optimized_cached_image: ^0.1.14
+  http: ^0.12.2
   animations: ^1.1.2
   shared_preferences: ^0.5.8
   audio_service: ^0.11.2
   just_audio: ^0.2.2
-  cached_network_image: ^2.2.0+1
   positioned_tap_detector: ^1.0.3
   flutter_html: ^1.0.0
   marquee: ^1.5.2
   flutter_custom_tabs: ^0.6.0
   flutter_downloader: ^1.4.4
   miniplayer: ^0.1.0
+  image: ^2.1.14
+  flutter_cache_manager: ^1.4.1
   #TODO: https://pub.dev/packages/quick_actions
 
 dependency_overrides:
