--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: podcast_player
 description: A new Flutter project.
 
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+publish_to: 'none'
 
 version: 1.0.0+1
 
@@ -12,6 +12,7 @@ dependencies:
   flutter:
     sdk: flutter
 
+  miniplayer: ^0.2.0
   http: ^0.12.2
   animations: ^1.1.2
   shared_preferences: ^0.5.8
@@ -22,9 +23,9 @@ dependencies:
   marquee: ^1.5.2
   flutter_custom_tabs: ^0.6.0
   flutter_downloader: ^1.4.4
-  miniplayer: ^0.1.0
   image: ^2.1.14
   flutter_cache_manager: ^1.4.1
+  google_fonts: ^1.1.0
   #TODO: https://pub.dev/packages/quick_actions
 
 dependency_overrides:
@@ -35,10 +36,6 @@ dependency_overrides:
 #  flutter_test:
 #    sdk: flutter
 
-# For information on the generic Dart part of this file, see the
-# following page: https://dart.dev/tools/pub/pubspec
-
-# The following section is specific to Flutter.
 flutter:
 
   # The following line ensures that the Material Icons font is
@@ -46,33 +43,10 @@ flutter:
   # the material Icons class.
   uses-material-design: true
 
-  # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/google_fonts/
 
-  # An image asset can refer to one or more resolution-specific "variants", see
-  # https://flutter.dev/assets-and-images/#resolution-aware.
-
-  # For details regarding adding assets from package dependencies, see
-  # https://flutter.dev/assets-and-images/#from-packages
-
-  # To add custom fonts to your application, add a fonts section here,
-  # in this "flutter" section. Each entry in this list should have a
-  # "family" key with the font family name, and a "fonts" key with a
-  # list giving the asset and other descriptors for the font. For
-  # example:
   fonts:
     - family: PodcastIcons
       fonts:
         - asset: assets/PodcastIcons.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
-  #
-  # For details regarding fonts from package dependencies,
-  # see https://flutter.dev/custom-fonts/#from-packages
