--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,9 @@ dependencies:
   http: ^0.12.2
   animations: ^1.1.2
   shared_preferences: ^0.5.10
-  audio_service: ^0.11.2
+  audio_service:
+    git:
+      url: git://github.com/ryanheise/audio_service.git
   just_audio: ^0.2.2
   positioned_tap_detector: ^1.0.3
   flutter_html: ^1.0.2
