--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   progress_dialog: ^1.2.4
   permission_handler: ^5.0.1+1
   webview_flutter: ^0.3.22+1
+  url_launcher: ^5.5.2
   #TODO: https://pub.dev/packages/quick_actions
 
 #dev_dependencies:
