--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   google_fonts: ^1.1.0
   xml: ^4.5.0
   file_picker: ^1.13.3
+  file_picker_web: any
   progress_dialog: ^1.2.4
   permission_handler: ^5.0.1+1
   webview_flutter: ^0.3.22+1
