--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,9 +16,7 @@ dependencies:
   http: ^0.12.2
   animations: ^1.1.2
   shared_preferences: ^0.5.10
-  audio_service:
-    git:
-      url: git://github.com/ryanheise/audio_service.git
+  audio_service: ^0.15.0
   just_audio: ^0.2.2
   positioned_tap_detector: ^1.0.3
   flutter_html: ^1.0.2
