--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,7 +27,7 @@ dependencies:
   flutter_cache_manager: ^1.4.1
   google_fonts: ^1.1.1
   xml: ^4.5.0
-  #file_picker: ^2.1.0
+  file_picker: ^2.1.0
   progress_dialog: ^1.2.4
   permission_handler: ^5.0.1+1
   url_launcher: ^5.7.10
