--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,37 +6,25 @@ publish_to: 'none'
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.7.0 <3.0.0"
+  sdk: ">=2.12.0 <3.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
 
-  miniplayer: ^0.6.1
-  http: ^0.12.2
-  animations: ^1.1.2
-  shared_preferences: ^0.5.12+4
-  audio_service: ^0.15.3
-  just_audio: ^0.2.2
-  positioned_tap_detector: ^1.0.3
-  flutter_html: ^1.1.1
-  marquee: ^1.6.0
-  flutter_custom_tabs: ^0.6.0
-  flutter_downloader: ^1.5.2
-  image: ^2.1.19
-  flutter_cache_manager: ^1.4.1
-  google_fonts: ^1.1.1
-  xml: ^4.5.0
-  permission_handler: ^5.0.1+1
-  url_launcher: ^5.7.10
-  storage_backup:
-    path: C:\Users\David\IdeaProjects\storage_backup
-  provider: ^4.3.2+3
-  #TODO: https://pub.dev/packages/quick_actions
+  async: ^2.5.0
+  hive: ^2.0.0
+  flutter_riverpod: ^0.13.1
+  http: ^0.13.0
+  uuid: ^3.0.1
+  intl: ^0.17.0
+  state_notifier: ^0.7.0
+  xml: ^5.0.2
+  stream_transform: ^2.0.0
 
-#dev_dependencies:
-#  flutter_test:
-#    sdk: flutter
+dev_dependencies:
+  flutter_test:
+    sdk: flutter
 
 flutter:
 
