--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,7 +20,9 @@ dependencies:
   intl: ^0.17.0
   state_notifier: ^0.7.0
   xml: ^5.0.2
+  smooth_page_indicator: ^0.3.0-nullsafety.0
   stream_transform: ^2.0.0
+  path_provider: ^2.0.1
 
 dev_dependencies:
   flutter_test:
