--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
 
   async: ^2.5.0
   hive: ^2.0.3
+  hive_flutter: ^1.0.0
   flutter_riverpod: ^0.13.1
   http: ^0.13.1
   uuid: ^3.0.4
@@ -23,10 +24,13 @@ dependencies:
   smooth_page_indicator: ^0.3.0-nullsafety.0
   stream_transform: ^2.0.0
   path_provider: ^2.0.1
+  google_fonts: ^2.0.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  hive_generator: ^1.0.1
+  build_runner: ^1.12.2
 
 flutter:
 
